--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,6 +1,7 @@
 .Layout {
-    background-color: orangered;
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: 1fr 80vh repeat(3, 1fr);
     grid-template-columns: repeat(10, 1fr);
+
+    background-color: #ffffff;
 }
