--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -5,14 +5,11 @@
     background-position: center;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
-
-
 }
 
 .Greeting {
-    grid-column: 2;
     grid-row: 1;
     color: #ffffff;
     font-size: 4rem;
@@ -23,8 +20,7 @@
     align-self: center;
 }
 
-.Text {
-    grid-column: 2;
+.Role {
     grid-row: 2;
     color: #ffffff;
     font-size: 3.5rem;
@@ -35,12 +31,12 @@
     align-self: center;
 }
 
-.Paragraph {
-    grid-column: 1 / -1;
+.Description {
     grid-row: 3;
     color: #ffffff;
     font-size: 3rem;
     font-weight: 500;
+    letter-spacing: .05em;
     justify-self: center;
     align-self: center;
 }
