--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .Layout {
     display: grid;
-    grid-template-rows: 1fr 80vh repeat(3, 1fr);
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: min-content 80vh repeat(5, min-content);
+    grid-template-columns: repeat(8, 1fr);
 
     background-color: #ffffff;
 }
