--- a/src/components/NavMenu/NavMenu.module.css
+++ b/src/components/NavMenu/NavMenu.module.css
@@ -11,7 +11,7 @@
     grid-column: 2 / -2;
 
     display: grid;
-    grid-template-columns: 1fr minmax(min-content, max-content);
+    grid-template-columns: 1fr min-content;
 }
 
 .Wrapper {
@@ -36,7 +36,7 @@
 .NavItems {
     display: grid;
     grid-column: 2;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 4rem;
     justify-items: end;
 
