--- a/src/containers/AboutSection/AboutSection.module.css
+++ b/src/containers/AboutSection/AboutSection.module.css
@@ -5,6 +5,8 @@
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, min-content);
     grid-column-gap: 4rem;
+
+    margin-bottom: 7rem;
 }
 
 .Description {
