--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -11,7 +11,7 @@
 
 .Greeting {
     grid-row: 1;
-    color: #ffffff;
+    color: var(--color-secondary);
     font-size: 4rem;
     font-weight: 700;
 
@@ -22,7 +22,7 @@
 
 .Role {
     grid-row: 2;
-    color: #ffffff;
+    color: var(--color-secondary);
     font-size: 3.5rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -33,7 +33,7 @@
 
 .Description {
     grid-row: 3;
-    color: #ffffff;
+    color: var(--color-secondary);
     font-size: 3rem;
     font-weight: 500;
     letter-spacing: .05em;
