--- a/src/containers/SkillSection/SkillSection.module.css
+++ b/src/containers/SkillSection/SkillSection.module.css
@@ -1,5 +1,6 @@
 .SkillSection {
     grid-column: 1 / -1;
+    grid-row: 4 / 5;
 
     display: grid;
     grid-template-columns: repeat(8, 1fr);
@@ -7,7 +8,6 @@
 
     background-image: linear-gradient(to bottom, var(--color-primary), var(--color-tertiary));
     background-color: var(--color-primary);
-    margin-bottom: 5rem;
 }
 
 .SkillItems {
