Minor styling changes
- Add transition prop to hovered elements
- Remove letter-spacing of nav elements
- Fix hovering of a project name
- Fix tech element alignment
- Edit About section text
- Increase gaps between Projects
- Decreased the whole content width

--- a/src/components/ProjectDescription/ProjectDescription.module.css
+++ b/src/components/ProjectDescription/ProjectDescription.module.css
@@ -7,10 +7,12 @@
 .ProjectDescription a {
     color: var(--color-primary-dark);
     text-decoration: none;
+    display: inline-block;
 }
 
 .ProjectDescription a:hover,
 .ProjectDescription a:active,
 .ProjectDescription a.active {
     color: var(--color-tertiary);
+    transition: all .2s;
 }
