--- a/src/components/TechItem/TechItem.module.css
+++ b/src/components/TechItem/TechItem.module.css
@@ -2,7 +2,7 @@
     width: 8rem;
     padding: 1rem;
     text-align: center;
-    margin: 1rem;;
+    margin: 1rem;
 
     color: var(--color-secondary);
     font-size: 1.5rem;
@@ -10,3 +10,8 @@
     background-color: var(--color-primary);
     border-radius: 4px;
 }
+
+.TechItem:first-child {
+    margin-left: 0;
+}
+
