--- a/src/components/NavMenu/NavItem/NavItem.module.css
+++ b/src/components/NavMenu/NavItem/NavItem.module.css
@@ -6,11 +6,11 @@
 .NavItem a:active,
 .NavItem a.active {
     border-bottom: 2px solid var(--color-primary);
+    transition: all .1s;
 }
 
 .NavLink:link,
 .NavLink:visited {
     color: currentColor;
     text-decoration: none;
-    font-weight: 500;
 }
