--- a/src/containers/ContactSection/ContactSection.module.css
+++ b/src/containers/ContactSection/ContactSection.module.css
@@ -23,7 +23,7 @@
 
 .Text {
     color: currentColor;
-    justify-self: center;
+    justify-self: end;
     align-self: center;
 }
 
@@ -46,7 +46,10 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     grid-row-gap: 3rem;
+}
 
+.ContactInfo {
+    grid-column-gap: 10rem;
 }
 
 .ContactGroup {
