--- a/src/components/ProjectDescription/ProjectDescription.module.css
+++ b/src/components/ProjectDescription/ProjectDescription.module.css
@@ -1,6 +1,7 @@
 .ProjectDescription p {
     line-height: 2;
     font-size: 1.7rem;
+    text-align: justify;
     color: var(--color-primary-light);
 }
 
