--- a/src/components/SkillItem/SkillItem.module.css
+++ b/src/components/SkillItem/SkillItem.module.css
@@ -3,3 +3,10 @@
     font-size: 2rem;
     align-self: center;
 }
+
+@media only screen and (max-width: 900px) {
+    .SkillItem {
+        font-size: 1.7rem;
+
+    }
+}
