--- a/src/containers/AboutSection/AboutSection.module.css
+++ b/src/containers/AboutSection/AboutSection.module.css
@@ -1,41 +1,75 @@
 .AboutSection {
     grid-column: 2 / -2;
+    margin-bottom: 7rem;
 
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, min-content);
-    grid-column-gap: 4rem;
-
-    margin-bottom: 7rem;
+    grid-template-rows: repeat(2, min-content);
 }
 
-.Description {
-    grid-column: 3 / 7;
-    grid-row: 2;
-}
-
-.Description p {
-    line-height: 2;
-    font-size: 1.6rem;
-    color: var(--color-primary-light);
-}
-
-.Description p:first-child {
-    margin-top: 0;
+.About {
+    display: grid;
+    grid-template-columns: 25vw 1fr;
+    grid-template-rows: repeat(2, min-content);
+    grid-column-gap: 3rem;
 }
 
 .Photo {
-    grid-column: 1 / 3;
+    margin-top: .6rem;
 }
 
 .Photo img {
-    height: 100%;
     width: 100%;
     border-radius: 2px;
     object-fit: cover;
     display: block;
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.19);
 }
+
+.Description p {
+    line-height: 2;
+    font-size: 1.6rem;
+    color: var(--color-primary-light);
+    text-align: justify;
+}
+
+.Description p:first-child {
+    margin-top: 0;
+}
+
+@media only screen and (max-width: 900px) {
+    .AboutSection {
+        grid-column: 1 / -1;
+        margin-right: 5rem;
+        margin-left: 5rem;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .AboutSection {
+        margin-right: 3rem;
+        margin-left: 3rem;
+        margin-bottom: 5rem;
+    }
+
+    .Photo {
+        grid-column: 1 / -1;
+        margin-bottom: 3rem;
+        margin-top: 0;
+    }
+
+    .Description {
+        grid-column: 1 / -1;
+        grid-row: 3;
+    }
+
+    .Photo img {
+        height: 100%;
+        border-radius: 2px;
+        box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.19);
+
+    }
+}
+
 
 
 
