--- a/src/containers/ContactSection/ContactSection.module.css
+++ b/src/containers/ContactSection/ContactSection.module.css
@@ -16,6 +16,7 @@
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 15rem;
 
     color: var(--color-secondary);
     margin-bottom: 7rem;
@@ -48,18 +49,53 @@
     grid-row-gap: 3rem;
 }
 
-.ContactInfo {
-    grid-column-gap: 10rem;
-}
-
 .ContactGroup {
     display: grid;
     grid-template-columns: min-content 1fr;
     grid-column-gap: 2rem;
-
 }
 
 .Icon {
     fill: var(--color-primary);
     pointer-events: none;
 }
+
+@media only screen and (min-width: 1600px) {
+    .ContactInfo {
+        grid-column-gap: 20rem;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .ContactInfo {
+        grid-column: 1 / -1;
+        margin-right: 5rem;
+        margin-left: 5rem;
+    }
+
+    .ContactInfo {
+        grid-column-gap: 7rem;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .ContactInfo {
+        grid-template-rows: min-content;
+        grid-template-columns: 1fr;
+        grid-row-gap: 4rem;
+    }
+
+    .Text {
+        display: none;
+    }
+
+    .Contacts {
+        grid-row-gap: 1rem;
+        justify-self: center;
+    }
+
+    .Icon {
+        height: 3rem;
+    }
+}
+
