--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -14,7 +14,7 @@
     color: var(--color-secondary);
     font-size: 4rem;
     font-weight: 700;
-
+    text-align: center;
     letter-spacing: .05em;
     justify-self: center;
     align-self: center;
@@ -23,10 +23,11 @@
 .Role {
     grid-row: 2;
     color: var(--color-secondary);
-    font-size: 3.5rem;
+    font-size: 4.5rem;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: .05em;
+    text-align: center;
     justify-self: center;
     align-self: center;
 }
@@ -37,6 +38,53 @@
     font-size: 3rem;
     font-weight: 500;
     letter-spacing: .05em;
+    text-align: center;
     justify-self: center;
     align-self: center;
 }
+@media only screen and (min-width: 1000px) {
+    .Greeting {
+        font-size: 4.5rem;
+    }
+
+    .Role {
+        font-size: 4.5rem;
+    }
+
+    .Description {
+        font-size: 3.5rem;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .Greeting {
+        font-size: 3.5rem;
+    }
+
+    .Role {
+        font-size: 3.5rem;
+        margin: 0 1rem;
+    }
+
+    .Description {
+        font-size: 2.5rem;
+        margin: 0 1rem;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .Greeting {
+        font-size: 3rem;
+    }
+
+    .Role {
+        font-size: 3rem;
+        margin: 0 1rem;
+    }
+
+    .Description {
+        font-size: 2rem;
+        margin: 0 1rem;
+    }
+}
+
