--- a/src/containers/ProjectSection/ProjectSection.module.css
+++ b/src/containers/ProjectSection/ProjectSection.module.css
@@ -13,8 +13,8 @@
     grid-row: 2;
 
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-row-gap: 5rem;
+    grid-template-rows: repeat(5, min-content);
+    grid-row-gap: 7rem;
 }
 
 .ProjectItem {
@@ -27,6 +27,7 @@
 .ProjectItem img {
     width: 100%;
     object-fit: cover;
+    margin-top: 1rem;
 }
 
 .ProjectDescription {
@@ -35,6 +36,50 @@
 .Tech {
     display: flex;
     flex-flow: row wrap;
+}
+
+@media only screen and (max-width: 900px) {
+    .ProjectSection {
+        grid-column: 1 / -1;
+        margin-right: 5rem;
+        margin-left: 5rem;
+    }
+
+    .ProjectItem {
+        grid-column-gap: 3rem;
+    }
+}
+
+@media only screen and (max-width: 725px) {
+    .ProjectItem {
+        display: grid;
+
+        grid-template-columns: 30vw 1fr;
+        grid-column-gap: 2rem;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .Projects {
+        grid-row-gap: 5rem;
+    }
+
+    .ProjectItem {
+        display: grid;
+
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, min-content);
+        grid-row-gap: 0;
+    }
+
+    .ProjectItem img {
+        grid-column: 1 / -1;
+        margin-top: 0;
+    }
+
+    .Tech {
+        justify-content: center;
+    }
 }
 
 
