Fix navbar position to stick to top when scrolling

--- a/src/components/NavMenu/NavItems/NavItem/NavItem.module.css
+++ b/src/components/NavMenu/NavItems/NavItem/NavItem.module.css
@@ -1,5 +1,8 @@
 .NavItem {
-    align-self: center;
+    margin: 0 1.5rem;
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
 }
 
 .NavItem a:hover,
