--- a/src/components/NavMenu/NavMenu.module.css
+++ b/src/components/NavMenu/NavMenu.module.css
@@ -1,55 +1,18 @@
 .NavMenu {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
     font-size: 1.5rem;
     color: var(--color-primary);
     text-transform: uppercase;
-    list-style: none;
-    margin: 2.5rem 0;
     background-color: #ffffff;
 
-    grid-row: 1 / 2;
-    grid-column: 2 / -2;
 
-    display: grid;
-    grid-template-columns: 1fr min-content;
-}
-
-.Wrapper {
-    display: flex;
-}
-
-.Logo {
-    height: 3rem;
-    margin-right: 1rem;
-    justify-self: start;
-    align-self: center;
-}
-
-.Name {
-    grid-column: 1 / 2;
-    font-size: 1.7rem;
-    font-weight: 700;
-    letter-spacing: .05em;
-    align-self: center;
-}
-
-.NavItems {
-    display: grid;
-    grid-column: 2;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 4rem;
-    justify-items: end;
-}
-
-@media only screen and (max-width: 900px) {
-    .NavMenu {
-        grid-column: 1 / -1;
-        margin-left: 5rem;
-        margin-right: 5rem;
-    }
-
-    .NavItems {
-        grid-column-gap: 2.5rem;
-    }
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 6rem;
+    border-bottom: 1.5px solid rgb(240, 231, 231);
 }
 
 
