--- a/src/components/NavMenu/NavItems/NavItems.module.css
+++ b/src/components/NavMenu/NavItems/NavItems.module.css
@@ -1,22 +1,19 @@
 .NavItems {
     margin: 0;
+    margin-right: 3rem;
     padding: 0;
     list-style: none;
     display: flex;
-    justify-items: space-between;
     align-items: center;
     height: 100%;
-
-    /* display: grid;
-    grid-column: 2;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 4rem;
-    justify-items: end;
-    list-style: none; */
+    color: black;
+    text-transform: uppercase;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 599px) {
     .NavItems {
-        flex-flow: row;
+        flex-flow: column;
+        margin-top: 2rem;
+        margin-left: 3.5rem;
     }
 }
