--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -10,6 +10,12 @@
     grid-template-rows: repeat(3, 1fr);
 }
 
+.Header p,
+.Header h1,
+.Header h2 {
+    text-shadow: 0 0 3rem var(--color-primary);
+}
+
 .Greeting {
     grid-row: 1;
     color: var(--color-secondary);
@@ -59,7 +65,7 @@
 
 @media only screen and (max-width: 900px) {
     .Greeting {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 
     .Role {
@@ -75,17 +81,16 @@
 
 @media only screen and (max-width: 600px) {
     .Greeting {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     .Role {
         font-size: 3rem;
-        margin: 0 1rem;
+        margin: 0 1.5rem;
     }
 
     .Description {
         font-size: 2rem;
-        margin: 0 1rem;
+        margin: 0 1.5rem;
     }
 }
-
