--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,6 @@ html {
   font-size: 62.5%;
 }
 
-@media only screen and (max-width: 86.25em) {
-  html {
-    font-size: 50%;
-  }
-}
-
 body {
   margin: 0;
   font-family: 'Merriweather', serif;
@@ -26,4 +20,10 @@ body {
 
 code {
   font-family: 'Merriweather', serif;
+}
+
+@media only screen and (max-width: 1380px) {
+  html {
+    font-size: 50%;
+  }
 }
