--- a/src/containers/ContactSection/ContactSection.module.css
+++ b/src/containers/ContactSection/ContactSection.module.css
@@ -58,6 +58,7 @@
 .Icon {
     fill: var(--color-primary);
     pointer-events: none;
+    animation: pulsate 1s infinite;
 }
 
 @media only screen and (min-width: 1600px) {
@@ -96,6 +97,22 @@
 
     .Icon {
         height: 3rem;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scale(1.06);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: none;
     }
 }
 
