--- a/src/containers/SkillSection/SkillSection.module.css
+++ b/src/containers/SkillSection/SkillSection.module.css
@@ -30,6 +30,11 @@
     padding: 1rem;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.19);
     border-radius: 5px;
+    transition: transform .3s;
+}
+
+.SkillGroup:hover {
+    transform: translateY(-.5rem ) scale(1.03);
 }
 
 .SkillLogo {
