--- a/src/containers/ProjectSection/ProjectSection.module.css
+++ b/src/containers/ProjectSection/ProjectSection.module.css
@@ -41,6 +41,12 @@
     flex-flow: row wrap;
 }
 
+@media only screen and (max-width: 1000px) {
+    .ProjectItem img {
+        margin-top: 1.5rem;
+    }
+}
+
 @media only screen and (max-width: 900px) {
     .ProjectSection {
         grid-column: 1 / -1;
