Small changes and fixes

--- a/src/containers/ProjectSection/ProjectSection.module.css
+++ b/src/containers/ProjectSection/ProjectSection.module.css
@@ -86,6 +86,10 @@
         margin-top: 0;
     }
 
+    .ProjectItem img:hover {
+        transform: none;
+    }
+
     .Tech {
         justify-content: center;
     }
