--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -17,3 +17,9 @@
         grid-template-rows: 6rem 50vh repeat(6, min-content);
     }
 }
+
+@media only screen and (max-height: 450px) {
+    .Layout {
+        grid-template-rows: 6rem 80vh repeat(6, min-content);
+    }
+}
