--- a/src/containers/ProjectSection/ProjectSection.module.css
+++ b/src/containers/ProjectSection/ProjectSection.module.css
@@ -69,6 +69,11 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .ProjectSection {
+        margin-right: 3.5rem;
+        margin-left: 3.5rem;
+    }
+
     .Projects {
         grid-row-gap: 5rem;
     }
