--- a/src/containers/SkillSection/SkillSection.module.css
+++ b/src/containers/SkillSection/SkillSection.module.css
@@ -31,6 +31,7 @@
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.19);
     border-radius: 5px;
     transition: transform .3s;
+    align-items: center;
 }
 
 .SkillLogo {
