--- a/src/containers/SkillSection/SkillSection.module.css
+++ b/src/containers/SkillSection/SkillSection.module.css
@@ -27,6 +27,7 @@
     grid-column-gap: 2rem;
     grid-row-gap: 5rem;
 
+    min-height: 5rem;
     padding: 1rem;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.19);
     border-radius: 5px;
